# studynotes

./: .gitmodules  LICENSE  README.md
atcoder/: .gitignore  new_atcoder.sh
atcoder/abc322/abc322_a/: Cargo.toml
atcoder/abc322/abc322_b/: Cargo.toml
atcoder/abc322/abc322_c/: Cargo.toml
atcoder/abc322/abc322_f/: Cargo.toml
atcoder/abc322/abc322a/: Cargo.toml
atcoder/abc322/abc322b/: Cargo.toml
atcoder/abc322/abc322c/: Cargo.toml
atcoder/abc322/abc322d/: Cargo.toml
atcoder/abc322/abc322e/: Cargo.toml
atcoder/abc322/abc322f/: Cargo.toml
atcoder/abc322/abc322g/: Cargo.toml
atcoder/abc323/abc323_a/: Cargo.toml
atcoder/abc323/abc323_c/: Cargo.toml
atcoder/abc324/abc324_b/: Cargo.toml
atcoder/abc326/abc326_a/: Cargo.toml
atcoder/template/: Cargo.toml  rust-toolchain.toml  testin
docs/: PrimalDualIPM.md  QCQP.md  SOCP.md  SVD.md  SVDExample.md  SVDMultiThread.md  _config.yml  index.md
docs/EM/: EM.md  GMM.md  GMMClustering.md
docs/SVM/: SMO.md  SVM.md  SVMRegression.md  SoftMarginSVM.md
docs/TV/: TV.md  TVMin.md  TVMinNR.md  TVSupp.md
docs/_layouts/: default.html  ext.html  math.html
docs/_pages/: home.md
sandbox/ConicOpt/: conopt.py  jacobi_eig.py  schur.py
sandbox/IC/: EIC.md  eic_ex1.py  eic_ex2-1.py  eic_ex2-2.py  eic_ex3.py  eic_ex4-1.py  eic_ex4-2.py
sandbox/MatFact/SVD/: CMakeLists.txt  SVD.sln  SVD.vcxproj  main.cpp  osj_svd.cpp  osj_svd.h  osj_svd_mt.cpp  osj_svd_mt.h  svd.cpp  svd.h
sandbox/SVD/: SVD.vcxproj  svd.cpp
sandbox/nRF52480/: .gitignore  nRF52840_memo.md
sandbox/nRF52840/: .gitignore  nRF52840_memo.md
(+933 files in other folders)
